--- a/style.css
+++ b/style.css
@@ -1,5 +1,99 @@
+:root {
+  --clr-neutral-900: hsl(207 19% 9%);
+  --clr-neutral-100: hsl(0 0% 100%);
+  --clr-accent-400: hsl(142 90% 61%);
+}
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
+}
+
+body {
+  display: grid;
+  min-height: 100vh;
+  place-items: center;
+  line-height: 1.6;
+  background: var(--clr-neutral-900);
+  font-family: sans-serif;
+  padding-right: 15em;
+}
+
+.card {
+  color: var(--clr-neutral-100);
+  background-image: url(/img/card-bg.jpg);
+  background-size: cover;
+  padding: 10rem 0 0;
+  max-width: 35ch;
+  border-radius: 0.5rem;
+  overflow: hidden;
+
+  transition: transform 500ms ease;
+}
+
+.card:hover {
+  transform: scale(1.05);
+}
+
+.card-content {
+  --padding: 1.5rem;
+  padding: var(--padding);
+  background: linear-gradient(hsl(0 0% 0% / 0), hsl(0 0% 0% / 1));
+  transform: translateY(65%);
+  transition: transform 500ms ease;
+}
+
+.card-content > *:not(.card-title) {
+  opacity: 0;
+  transition: opacity 500ms linear;
+}
+
+.card:hover .card-content {
+  transform: translateY(0);
+}
+
+.card:hover .card-content > *:not(.card-title) {
+  opacity: 1;
+}
+
+.card-title {
+  position: relative;
+  width: max-content;
+}
+
+.card-body {
+  color: rgb(255 255 255 / 0.8);
+}
+
+.card-title::after {
+  content: "";
+  position: absolute;
+  height: 4px;
+  left: calc(var(--padding) * -1);
+  bottom: -2px;
+  width: calc(100% + var(--padding));
+  background: var(--clr-accent-400);
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 500ms ease;
+}
+
+.card:hover .card-title::after {
+  transform: scaleX(1);
+}
+
+.button {
+  cursor: pointer;
+  display: inline-block;
+  text-decoration: none;
+  color: var(--clr-neutral-900);
+  background-color: var(--clr-accent-400);
+  padding: 0.5em 1.25em;
+  border-radius: 0.25rem;
+}
+
+.button:hover,
+.button:focus {
+  background-color: var(--clr-neutral-100);
 }
